  this default assignment because nobody care hiding tooltips (#1955140)
  (Matthieu Casanova)

- When the parent directory list is selected in the VFSBrowser, the selected
  files were always empty (Matthieu Casanova)

- when opening the save dialog, if the choosen path's VFS is not browseable,
  the default directory is opened instead (Matthieu Casanova)
}}}
{{{ Miscellaneous

- In the auto-indent code, use read-only "CharSequence" instances to avoid
  creating new strings (which results in a copy of the original data). This
  should reduce a little the memory usage of that code. Also change some other
  code that can avoid the user of strings (such as the word completion action).
  (Marcelo Vanzin)

- New status bar ErrorWidget added to display the 10 last exceptions that
  happened in jEdit (Matthieu Casanova)

- Toolbar and context menu can now be restored to default setting
  (Seph M. Soliman - #1961989)

- New BufferSet api. The EditPanes can now manage their own list of buffers,
  or share this list with the editpanes from the same view, and of course as
  usual share the same list between all EditPanes (the default behavior)
  A bufferSet widget is available for the status bar
  (Matthieu Casanova)

- New text macro "Line_Filter.bsh" added. It can filter the lines of a buffer
  to remove the lines that match or do not match a char sequence (patch #1981501)
  (Robert Schwenn)

- New Mac OS X application icon (Seph M. Soliman)

- The plain view can now have a status bar, a new option is added to choose it
  in the status bar option pane, and a new toggle menu is added to show/hide
  status bar in view menu (#1984974) (Matthieu Casanova)

- New images for splash screen and about dialog to match the new visual feel
  (Seph M. Soliman)

- New option to make the caret thicker. (SF.net Patch #1608486 - Nils Nordman)

}}}
{{{ Editing

- SF Patch #1947143: remove the hack to support sub names with apostrophes in